--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <div class="field">
               <div class="control has-text-centered">
                 <input id="website" name="website" type="text" class="input" placeholder="https://" autofocus>
+                <input id="burn" name="burn" type="hidden" value="FALSE">
+                <input id="fix" name="fix" type="hidden" value="FALSE">
               </div>
             </div>
             <div class="columns">
