- black hole scenario added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <img id="rocket-smoke" src="images/rocket/rocket-smoke.png" class="rocket-smoke" alt="rocket smoke">
       <img id="earth" src="images/earth/earth-and-moon.png" class="earth" alt="earth">
     </div>
+
+    <div id="black-hole-wrapper">
+      <img id="black-hole" src="images/black-hole/black-hole.png" class="black-hole" alt="black hole">
+    </div>
+
   </section>
 
   <!-- Site content -->
@@ -87,6 +92,22 @@
   <section id="details-section" class="section">
     <div id="success" class="container details">
       <div class="columns">
+        <div id="end-of-the-world" class="column is-8 is-offset-2 is-hidden">
+          <div class="content">
+            <h1 class="has-text-white">Köszi a visszajelzést, nagyra értékeljük.</h1>
+            <p class="has-text-white">
+              Sajnos, amint látod, nem nagyon lesz időnk feldolgozni, mert ahogy bánatunkban
+              saját önnön magunkat akartuk a napba lőni, véletlenül létrehoztunk egy fekete lyukat, ami
+              <strong>
+                <a class="light-speed tooltip is-tooltip-multiline"
+                   data-tooltip="Igen, ezt a szöveget is. A fekete lyukak már csak ilyenek.">
+                  perceken belül mindent elpusztít
+                </a>
+              </strong>. Hát ez van. Azért köszi még egyszer a visszajelzést!
+            </p>
+          </div>
+        </div>
+
         <div id="success-launch" class="column is-8 is-offset-2">
           <div class="content">
             <h1 class="has-text-white">Remek, ez könnyű volt.</h1>
