--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Napba lőném.">
   <meta name="author" content="László Békéssy">
 
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
+
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/bulma-tooltip.min.css">
   <link rel="stylesheet" href="css/styles.css">
