--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="hero-body">
       <div class="container">
         <div class="content has-text-centered">
-          <h1 class="title has-text-white">Rossz weboldal?</h1>
+          <h1 class="title has-text-white">Rossz weboldal? test</h1>
           <h3 class="subtitle has-text-white">Juhé! Mi a cím és mi legyen vele?</h3>
 
           <form id="input-form" name="input-form">
