- og added - og properties changed

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway&display=swap" rel="stylesheet">
 
-  <meta property="og:url"           content="https://www.webrendorseg.hu" />
+  <meta property="og:url"           content="https://napbalonem.hu" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Napba lőném." />
   <meta property="og:description"   content="Rossz weboldal? Javítsuk meg, vagy lőjük a napba?" />
-  <meta property="og:image"         content="https://www.napbalonem.hu/images/og.png" />
+  <meta property="og:image"         content="images/og.png" />
 </head>
 
 <body>
@@ -168,7 +168,7 @@
                   </div>
 
                   <p>
-                    Találtál egy csúnya vagy nem működő weboldalt? Remek! A <strong><a href="https://codeberryschool.com/hu?utm_source=webrendorseg.hu" target="_blank">CodeBerry School</a></strong> programozóiskolában
+                    Találtál egy csúnya vagy nem működő weboldalt? Remek! A <strong><a href="https://codeberryschool.com/hu?utm_source=napbalonem.hu" target="_blank">CodeBerry School</a></strong> programozóiskolában
                     diákok ezrei várnak arra, hogy megjavítsák vagy újratervezzék <strong>teljesen ingyen.</strong>
                     <br><br>
                     <strong>Ez miért jó?</strong>
