--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Rossz weboldal? Javítsuk meg, vagy lőjük a napba?</title>
+  <title>Rossz weboldal? Te döntesz. Javítsuk meg, vagy lőjük a napba?</title>
   <meta name="description" content="Napba lőném.">
   <meta name="author" content="László Békéssy">
 
@@ -15,11 +15,25 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway&display=swap" rel="stylesheet">
 
+  <!-- OG -->
   <meta property="og:url"           content="https://napbalonem.hu" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Napba lőném." />
-  <meta property="og:description"   content="Rossz weboldal? Javítsuk meg, vagy lőjük a napba?" />
-  <meta property="og:image"         content="images/og.png" />
+  <meta property="og:description"   content="Rossz weboldal? Te döntesz. Javítsuk meg, vagy lőjük a napba?" />
+  <meta property="og:image"         content="https://napbalonem.hu/images/og.png" />
+  <!-- /OG -->
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-141698457-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <!-- /Google Analytics -->
 </head>
 
 <body>
