- mobile responsibility issues fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Solar system -->
   <section>
     <div id="sun-wrapper">
-      <img id="sun" src="images/sun/sun-no-ring.png" class="sun" alt="sun">  
+      <img id="sun" src="images/sun/sun-no-ring.png" class="sun" alt="sun">
       <img id="sun-ring-1" src="images/sun/sun-ring-1.png" class="sun rotate-slow-left" alt="sun ring">
       <img id="sun-ring-2" src="images/sun/sun-ring-2.png" class="sun rotate-slow-right" alt="sun ring">
     </div>
@@ -62,7 +62,7 @@
 
   <!-- Site content -->
   <!-- Hero -->
-  <section class="hero is-narrow">
+  <section class="hero is-small">
     <div class="hero-head">
       <nav class="navbar"></nav>
     </div>
@@ -107,8 +107,8 @@
   <!-- Details -->
   <section id="details-section" class="section">
     <div id="success" class="container details">
-      <div class="columns">
-        <div id="end-of-the-world" class="column is-8 is-offset-2 is-hidden">
+      <div class="columns is-multiline">
+        <div id="end-of-the-world" class="column is-8 is-offset-2">
           <div class="content">
             <h1 class="has-text-white">Köszi a visszajelzést, nagyra értékeljük.</h1>
             <p class="has-text-white">
