- copy fix, script fix

--- a/index.html
+++ b/index.html
@@ -182,22 +182,28 @@
                   </div>
 
                   <p>
-                    Találtál egy csúnya vagy nem működő weboldalt? Remek! A <strong><a href="https://codeberryschool.com/hu?utm_source=napbalonem.hu" target="_blank">CodeBerry School</a></strong> programozóiskolában
-                    diákok ezrei várnak arra, hogy megjavítsák vagy újratervezzék <strong>teljesen ingyen.</strong>
+                    Találtál egy csúnya vagy nem működő weboldalt? Remek! Rengeteg friss informatikus vár arra, hogy valamilyen projektmunkán
+                    dolgozhasson. Tanulni sokkal élvezetesebb, ha a való életből merített projekteken keresztül gyakorlunk.
+                    Mialatt ezt olvasod, a háttérben éppen sokan dolgoznak az itt beküldött oldalak újratervezésén.
+                    <strong>Teljesen ingyen.</strong>
                     <br><br>
-                    <strong>Ez miért jó?</strong>
+                    <strong>És ez miért jó?</strong>
                     <br>
-                    Tanulni sokkal élvezetesebb, ha való életből merített izgalmas projekteken keresztül gyakorlunk. Plusz minden így keletkező projektmunkát
-                    <strong>visszaküldünk az eredeti tulajdonosának</strong>, abban bízva, hogy lecseréli a régi oldalt és ezzel kevesebb bosszúságot
-                    okoz a világnak. <strong>Win-win.</strong>
+                    A tanuló fejlesztőknek gyakorolni kell, mielőtt munkába állnak, ebben segít a projekt. Emellett minden újratervezett oldalt
+                    visszaküldünk a tulajdonosának abban reménykedve, hogy lecseréli a régit és ezzel kevesebb bosszúságot okoz a világnak.
+                    <strong>Win-win.</strong>
                     <br><br>
-                    Egy botrányosan rossz weboldal így egy kiváló lehetőség a diákjaink számára. Szóval ha ilyet küldtél, az aranyat ér.
-                    Könnyen lehet, hogy pont az általad beküldött oldal lesz a következő amit megjavítunk. Jó, nem? De. Naugye.
+                    Persze a modellnek megvan a maga korlája: egy nagy cég nem valószínű, hogy változtat, de egy
+                    kis non-profit szervezet vagy cég kifejezetten hálás egy megjavított weboldalért.
+                    <br><br>
+                    <strong>Kik dolgoznak az újratervezésen?</strong>
+                    <br>Programozóiskolák tanulói, például a <strong><a href="https://codeberryschool.com/hu?utm_source=napbalonem.hu" target="_blank">CodeBerry School</a></strong> diákjai is.
+                    <br><br>
                   </p>
 
                   <h2 class="title">Szeretnél még segíteni?</h2>
                   <p>Ha tetszik az oldal vagy a kezdeményezés, segít, ha megosztod. Minél több weboldalt kapunk, annál többet tudunk megjavítani és a
-                    a diákjaink és annál izgalmasabb projektekkel foglalkozhatnak. Mindenki nyer.
+                    "friss diplomások" annál izgalmasabb projektekkel foglalkozhatnak. Mindenki nyer.
                     <br><br>
                     Szimplán másold be az oldal címét az üzenetedbe, a többit a robotok megoldják: <strong>https://napbalonem.hu</strong>. Köszi ❤️
                     <br><br>
