--- a/site/index-hu-HU.html
+++ b/site/index-hu-HU.html
@@ -8,19 +8,19 @@
   <meta name="description" content="Napba lőném.">
   <meta name="author" content="László Békéssy">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.ico">
 
-  <link rel="stylesheet" href="css/bulma.min.css">
-  <link rel="stylesheet" href="css/bulma-tooltip.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/bulma.min.css">
+  <link rel="stylesheet" href="../css/bulma-tooltip.min.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway&display=swap" rel="stylesheet">
 
   <!-- OG -->
-  <meta property="og:url"           content="https://napbalonem.hu" />
+  <meta property="og:url"           content="https://napbalonem.net" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Napba lőném." />
   <meta property="og:description"   content="Rossz weboldal? Te döntesz. Javítsuk meg, vagy lőjük a napba?" />
-  <meta property="og:image"         content="https://napbalonem.hu/images/og.png" />
+  <meta property="og:image"         content="https://napbalonem.net/images/og-hu-HU.png" />
   <!-- /OG -->
 
   <!-- Google Analytics -->
@@ -40,22 +40,22 @@
   <!-- Solar system -->
   <section>
     <div id="sun-wrapper">
-      <img id="sun" src="images/sun/sun-no-ring.png" class="sun" alt="sun">
-      <img id="sun-ring-1" src="images/sun/sun-ring-1.png" class="sun rotate-slow-left" alt="sun ring">
-      <img id="sun-ring-2" src="images/sun/sun-ring-2.png" class="sun rotate-slow-right" alt="sun ring">
+      <img id="sun" src="../images/sun/sun-no-ring.png" class="sun" alt="sun">
+      <img id="sun-ring-1" src="../images/sun/sun-ring-1.png" class="sun rotate-slow-left" alt="sun ring">
+      <img id="sun-ring-2" src="../images/sun/sun-ring-2.png" class="sun rotate-slow-right" alt="sun ring">
     </div>
 
     <div id="earth-wrapper">
       <div id="rocket-wrapper">
-        <img id="rocket-flame" src="images/rocket/rocket-flame.png" class="rocket-flame" alt="rocket flame">
-        <img id="rocket-body" src="images/rocket/rocket.png" class="rocket-body" alt="rocket body">
+        <img id="rocket-flame" src="../images/rocket/rocket-flame.png" class="rocket-flame" alt="rocket flame">
+        <img id="rocket-body" src="../images/rocket/rocket.png" class="rocket-body" alt="rocket body">
       </div>
-      <img id="rocket-smoke" src="images/rocket/rocket-smoke.png" class="rocket-smoke" alt="rocket smoke">
-      <img id="earth" src="images/earth/earth-and-moon.png" class="earth" alt="earth">
+      <img id="rocket-smoke" src="../images/rocket/rocket-smoke.png" class="rocket-smoke" alt="rocket smoke">
+      <img id="earth" src="../images/earth/earth-and-moon.png" class="earth" alt="earth">
     </div>
 
     <div id="black-hole-wrapper">
-      <img id="black-hole" src="images/black-hole/black-hole.png" class="black-hole" alt="black hole">
+      <img id="black-hole" src="../images/black-hole/black-hole.png" class="black-hole" alt="black hole">
     </div>
 
   </section>
@@ -197,7 +197,7 @@
                     kis non-profit szervezet vagy cég kifejezetten hálás egy megjavított weboldalért.
                     <br><br>
                     <strong>Kik dolgoznak az újratervezésen?</strong>
-                    <br>Programozóiskolák tanulói, például a <strong><a href="https://codeberryschool.com/hu?utm_source=napbalonem.hu" target="_blank">CodeBerry School</a></strong> diákjai is.
+                    <br>Programozóiskolák tanulói, például a <strong><a href="https://codeberryschool.com/hu?utm_source=napbalonem.net" target="_blank">CodeBerry School</a></strong> diákjai is.
                     <br><br>
                   </p>
 
@@ -205,7 +205,7 @@
                   <p>Ha tetszik az oldal vagy a kezdeményezés, segít, ha megosztod. Minél több weboldalt kapunk, annál többet tudunk megjavítani és a
                     "friss diplomások" annál izgalmasabb projektekkel foglalkozhatnak. Mindenki nyer.
                     <br><br>
-                    Szimplán másold be az oldal címét az üzenetedbe, a többit a robotok megoldják: <strong>https://napbalonem.hu</strong>. Köszi ❤️
+                    Szimplán másold be az oldal címét az üzenetedbe, a többit a robotok megoldják: <strong>https://napbalonem.net</strong>. Köszi ❤️
                     <br><br>
                     Ha csak egy <a href="https://giphy.com/search/kittens" target="_blank">cicás GIF</a> választ el a megosztástól, ezen ne múljon.
                   </p>
@@ -216,7 +216,7 @@
                   <p>Íme, kérlek foglalj helyet,</p>
                   <br>
                   <p class="has-text-centered">
-                    <img class="derp-bench-image" alt="derp-bench" src="images/bench/derp-bench.png">
+                    <img class="derp-bench-image" alt="derp-bench" src="../images/bench/derp-bench.png">
                   </p>
                   <div class="field">
                     <label class="">és nyugodtan adj ki magadból mindent.</label>
@@ -239,7 +239,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Sites Against Humanity</strong> made with 🔥by <a href="https://laszlobekessy.me">László Békéssy</a>.
+        <strong>Sites Against Humanity</strong> made with 🔥by <a href="https://www.linkedin.com/in/laszlo-bekessy" target="_blank">László Békéssy</a>.
         <br>
         The website content is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
         <br>
@@ -247,7 +247,7 @@
           <small>
             We use no cookies, and we don't store your personal data.
             <br>
-            Traffic based data will be shared with Google and Facebook. This is our policy.
+            Traffic based data will be shared with Google and Facebook. This is the policy.
           </small>
         </em>
       </p>
@@ -255,7 +255,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script type="text/javascript" src="js/scripts.js"></script>
+  <script type="text/javascript" src="../js/scripts.js"></script>
 </body>
 
 </html>
