- index moved back to root

--- a/index-hu-HU.html
+++ b/index-hu-HU.html
@@ -8,11 +8,11 @@
   <meta name="description" content="Napba lőném.">
   <meta name="author" content="László Békéssy">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
 
-  <link rel="stylesheet" href="../css/bulma.min.css">
-  <link rel="stylesheet" href="../css/bulma-tooltip.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="css/bulma.min.css">
+  <link rel="stylesheet" href="css/bulma-tooltip.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway&display=swap" rel="stylesheet">
 
   <!-- OG -->
@@ -40,22 +40,22 @@
   <!-- Solar system -->
   <section>
     <div id="sun-wrapper">
-      <img id="sun" src="../images/sun/sun-no-ring.png" class="sun" alt="sun">
-      <img id="sun-ring-1" src="../images/sun/sun-ring-1.png" class="sun rotate-slow-left" alt="sun ring">
-      <img id="sun-ring-2" src="../images/sun/sun-ring-2.png" class="sun rotate-slow-right" alt="sun ring">
+      <img id="sun" src="images/sun/sun-no-ring.png" class="sun" alt="sun">
+      <img id="sun-ring-1" src="images/sun/sun-ring-1.png" class="sun rotate-slow-left" alt="sun ring">
+      <img id="sun-ring-2" src="images/sun/sun-ring-2.png" class="sun rotate-slow-right" alt="sun ring">
     </div>
 
     <div id="earth-wrapper">
       <div id="rocket-wrapper">
-        <img id="rocket-flame" src="../images/rocket/rocket-flame.png" class="rocket-flame" alt="rocket flame">
-        <img id="rocket-body" src="../images/rocket/rocket.png" class="rocket-body" alt="rocket body">
+        <img id="rocket-flame" src="images/rocket/rocket-flame.png" class="rocket-flame" alt="rocket flame">
+        <img id="rocket-body" src="images/rocket/rocket.png" class="rocket-body" alt="rocket body">
       </div>
-      <img id="rocket-smoke" src="../images/rocket/rocket-smoke.png" class="rocket-smoke" alt="rocket smoke">
-      <img id="earth" src="../images/earth/earth-and-moon.png" class="earth" alt="earth">
+      <img id="rocket-smoke" src="images/rocket/rocket-smoke.png" class="rocket-smoke" alt="rocket smoke">
+      <img id="earth" src="images/earth/earth-and-moon.png" class="earth" alt="earth">
     </div>
 
     <div id="black-hole-wrapper">
-      <img id="black-hole" src="../images/black-hole/black-hole.png" class="black-hole" alt="black hole">
+      <img id="black-hole" src="images/black-hole/black-hole.png" class="black-hole" alt="black hole">
     </div>
 
   </section>
@@ -216,7 +216,7 @@
                   <p>Íme, kérlek foglalj helyet,</p>
                   <br>
                   <p class="has-text-centered">
-                    <img class="derp-bench-image" alt="derp-bench" src="../images/bench/derp-bench.png">
+                    <img class="derp-bench-image" alt="derp-bench" src="images/bench/derp-bench.png">
                   </p>
                   <div class="field">
                     <label class="">és nyugodtan adj ki magadból mindent.</label>
@@ -255,7 +255,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script type="text/javascript" src="../js/scripts.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 
 </html>
