- rocket pictures added in png - robots txt added - facebook og changed

--- a/index-hu-HU.html
+++ b/index-hu-HU.html
@@ -16,11 +16,13 @@
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway&display=swap" rel="stylesheet">
 
   <!-- OG -->
+  <meta property="fb:app_id"        content="1448234171986197" />
   <meta property="og:url"           content="https://napbalonem.net" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Napba lőném." />
   <meta property="og:description"   content="Rossz weboldal? Te döntesz. Javítsuk meg, vagy lőjük a napba?" />
   <meta property="og:image"         content="https://napbalonem.net/images/og-hu-HU.png" />
+  <meta property="og:image:alt"     content="shoot the rocket into the sun" />
   <!-- /OG -->
 
   <!-- Google Analytics -->
