--- a/index-hu-HU.html
+++ b/index-hu-HU.html
@@ -21,7 +21,7 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Napba lőném." />
   <meta property="og:description"   content="Rossz weboldal? Te döntesz. Javítsuk meg, vagy lőjük a napba?" />
-  <meta property="og:image"         content="https://napbalonem.net/images/og-hu-HU.png" />
+  <meta property="og:image"         content="https://napbalonem.net/images/og/og-hu-HU.png" />
   <meta property="og:image:alt"     content="shoot the rocket into the sun" />
   <!-- /OG -->
 
